make element sticky to the right/left side

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     }
 
     #whatsapp-widget .ww-text {
-      /* display: none; */
+      height: 16px;
       pointer-events: none;
       border-radius: 8px;
       border: 1px solid #e2e2e2;
@@ -100,11 +100,8 @@
       position: relative;
       box-shadow: 2px 2px 15px 2px rgb(0 0 0 / 17%);
       opacity: 0;
-      /* animation: slide 1s;
-      animation-delay: 3s;
-      animation-fill-mode: forwards; */
       transition: opacity 0.5s;
-      margin-bottom: 15px;
+      margin-bottom: 8px;
       z-index: 100;
     }
 
