--- a/index.html
+++ b/index.html
@@ -299,18 +299,20 @@
       iconLink.ontouchstart = dragMouseDown;
 
       function dragMouseDown(e) {
-        e.preventDefault()
+        // e.preventDefault()
         document.documentElement.style.overflow = 'hidden';
-
-        document.onmouseup = closeDragElement;
-        document.ontouchend = closeDragElement;
 
         document.onmousemove = elementDrag;
         document.ontouchmove = elementDrag;
+        document.onmouseup = closeDragElement;
+        document.ontouchend = closeDragElement;
+
+        
 
       }
 
       function elementDrag(e) {
+        // e.preventDefault()
         const offset = window.innerHeight - clientY - elmnt.offsetHeight / 2 - 10
 
         iconLink.style.pointerEvents = 'none'
@@ -319,7 +321,7 @@
 
         elmnt.style.bottom = offset < 0 ? 0 : offset > window.innerHeight - elmnt.offsetHeight / 2 - 30 ? window.innerHeight - elmnt.offsetHeight / 2 - 30 : offset + "px";
         elmnt.style.right = (window.innerWidth - clientX - elmnt.offsetWidth / 2 + 10) + "px";
-        e.returnValue - false
+        // e.returnValue - false
       }
 
       function closeDragElement(e) {
